# net-n

./: LICENSE  create_doc.sh  index.html  mkdocs.yml
.github/workflows/: publish.yml
backend/: Dockerfile
backend/switchManagerAPI/: .gitignore  README.md  exemple_config.yaml  pyproject.toml  sql_app.db
backend/switchManagerAPI/switchmanagerapi/: config.py  logger.py  main.py
backend/switchManagerAPI/switchmanagerapi/adapters/: IMC.py  adapter.py  sync.py  syncDevices.py
backend/switchManagerAPI/switchmanagerapi/db/: __init__.py  context.py  db.py  factories.py  pool.py  switches.py
backend/switchManagerAPI/switchmanagerapi/db/schemas/: __init__.py  connections.py  customers.py  switches.py
backend/switchManagerAPI/switchmanagerapi/jobs/: connections.py  scheduler.py  syncModule.py
backend/switchManagerAPI/switchmanagerapi/models/: __init__.py  connection.py  customer.py  factories.py  switch.py
backend/switchManagerAPI/switchmanagerapi/routers/: connections.py  customers.py  switches.py
backend/switchManagerAPI/switchmanagerapi/sync-module/: interface.py  sql-sync.py
backend/switchManagerAPI/switchmanagerapi/tests/: mockups.py
backend/syncModule/: pyproject.toml
backend/syncModule/pdoc/: index.html  main.html
backend/syncModule/pdoc/implementations/: index.html  interface.html  sqlSource.html  types.html
backend/syncModule/syncmodule/: main.py
backend/syncModule/syncmodule/implementations/: interface.py  sqlSource.py  types.py
docs/: index.md
front/: Dockerfile
switchManagerAPI/: README.md  openapi.json  pyproject.toml
(+79 files in other folders)
