[tool.poetry]
name = "switchmanagerapi"
version = "0.1.0"
description = ""
authors = ["Nathan Schwarz <nathan.schwarz97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
faker = "^19.11.0"
aiosqlite = "^0.19.0"

[tool.poetry.scripts]
start = "switchmanagerapi.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"